# Parsify

./: CMakeLists.txt  README.md  Token.h  TokenStream.cpp  TokenStream.h  license.txt  main.cpp  new-syntax-json.txt  new-syntax.txt  syntax.txt  test-syntax.txt
Parser/: Definition.cpp  Definition.h  NodeDefinition.cpp  NodeDefinition.h  Parser.cpp  Parser.h  PropertyDefinition.cpp  PropertyDefinition.h  Syntax.cpp  Syntax.h  SyntaxDefinition.cpp  SyntaxDefinition.h  TokenDefinition.cpp  TokenDefinition.h
Parser2/: BaseChecks.cpp  BaseChecks.h  Checker.cpp  Checker.h  Condition.h  FileReadInterface.cpp  FileReadInterface.h  Matcher.cpp  Matcher.h  Reference.cpp  Reference.h  Repeater.cpp  Repeater.h  Rule.cpp  Rule.h  Sequence.cpp  Sequence.h  Set.cpp  Set.h  String.cpp  String.h  Syntax.cpp  Syntax.h
Tokenizer/: Token.h  TokenDefinition.cpp  TokenStream.cpp  TokenStream.h  TokenStreamDynamic.cpp  TokenType.h
Translator/: Translator.cpp  Translator.h
stubs/: Token.h  TokenStream.cpp
